[tool.poetry]
name = "clock"
version = "0.1.0"
description = ""
authors = ["James Thorniley <james.thorniley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.3"
scipy = "^1.3.2"
matplotlib = "^3.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
matplotlib = "^3.1.1"
flake8 = "^3.7.9"
yapf = "^0.28.0"
doc8 = "^0.8.0"
autopep8 = "^1.4.4"

[tool.poetry.scripts]
pendulum="clock:pendulum"
escapement="clock:escapement"
escapement_surface="clock:escapement_surface"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
